# bandcamp-archiver

./: .gitignore  Cargo.toml  README.md
src/: album.rs  args.rs  downloader.rs  main.rs  scrapper.rs
