[package]
name = "bandcamp-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.1.4"
reqwest      = { version = "0.12", features = ["stream"] }
tokio        = { version = "1.40", features = ["full"] }
indicatif    = "0.17"
